some work on dissertation and attempted 2d dam break and failed

--- a/doc/dissertation/abstract.tex
+++ b/doc/dissertation/abstract.tex
@@ -5,6 +5,17 @@
 %\pagenumbering{roman} % Roman numerals
 \setcounter{page}{2}
 
-\indent Abstract will go here.
+\indent
+The Flux-Corrected Transport (FCT) algorithm in conjunction with the
+entropy viscosity method was applied to scalar radiation transport and
+the shallow water equations with the continuous finite element method.
+For smooth problems, second-order spatial accuracy is achieved if adequate
+solution bounds are used in the FCT algorithm. The resulting scheme is
+positivity-preserving and reduces the onset of spurious oscillations.
+Explicit SSPRK time discretizations are considered for both scalar
+radiation transport and the shallow water equations, and additionally
+for scalar radiation transport, $\theta$ time discretizations and
+steady-state are considered. Implicit FCT is shown to have significant
+convergence issues.
 
 \pagebreak{}
