some work on dissertation

--- a/doc/dissertation/chapter1.tex
+++ b/doc/dissertation/chapter1.tex
@@ -1,5 +1,5 @@
 \chapter{INTRODUCTION}
 
-\section{Purpose}
+%\section{Purpose}
   \input{content/introduction/purpose}
-\section{Previous Work}
+%\section{Previous Work}
