--- a/doc/dissertation/chapter2.tex
+++ b/doc/dissertation/chapter2.tex
@@ -1,10 +1,11 @@
 \chapter{METHODOLOGY}
 
+\input{content/methodology_intro}
 %===============================================================================
-\section{Model Equations}
+\section{Model Equations}\label{sec:model_equations}
 %===============================================================================
-\subsection{Conservation Law Systems\label{sec:conservation_laws}}
-  \input{content/preliminaries/conservation_laws}
+%\subsection{Conservation Law Systems\label{sec:conservation_laws}}
+%  \input{content/preliminaries/conservation_laws}
 \subsection{Scalar Conservation Laws\label{sec:scalar}}
   \input{content/preliminaries/scalar}
 \subsection{The Shallow Water Equations\label{sec:shallowwater}}
@@ -13,7 +14,7 @@
     \label{sec:shallowwater_characteristics}}
     \input{content/preliminaries/shallowwater_characteristics}
 %===============================================================================
-\section{Discretization}
+\section{Discretization}\label{sec:discretization}
 %===============================================================================
 \subsection{Spatial Discretization for Scalar Conservation Laws
   \label{sec:spatial_discretization_scalar}}
@@ -33,7 +34,7 @@
   \subsubsection{Theta Schemes\label{sec:theta}}
     \input{content/discretization/theta}
 %===============================================================================
-\section{Low-Order Scheme for Scalar Conservation Laws}  
+\section{Low-Order Scheme for Scalar Conservation Laws}\label{sec:low_order_scalar}
 %===============================================================================
 \subsection{Low-Order Viscosity\label{sec:low_order_viscosity_scalar}}
   \input{content/low_order/low_order_viscosity_scalar}
@@ -46,7 +47,7 @@
   \input{content/low_order/explicit_DMP}
   \input{content/low_order/theta_DMP}
 %===============================================================================
-\section{Low-Order Scheme for Conservation Law Systems}  
+\section{Low-Order Scheme for Conservation Law Systems}\label{sec:low_order_system}
 %===============================================================================
 \subsection{Invariant Domains\label{sec:invariant_domains}}
   \input{content/low_order/invariant_domain}
